--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,51 +1,64 @@
-.banner
-{
-    background-size: cover;
-    height: 478px;
-    color:white;
-}
-.content{
-    padding-top: 140px;
-    height: 190px;
-    padding-left: 15px;
-
+.banner {
+  background-size: cover;
+  height: 478px;
+  color: white;
+  opacity: 0; /* GSAP will animate this */
+  transform: translateY(50px); /* GSAP will reset this */
+  position: relative; /* Required for gradient fade */
 }
 
-.title{
-    font-size:3rem;
-    font-weight: 800;
-    padding-bottom: 0.3rem;
-}
-.btn{
-    color: white;
-    outline: none;
-    border: none;
-    font-weight: 700;
-    border-radius: 5px;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    background-color: rgba(51, 51, 51, .5);
-    cursor: pointer; 
-    margin: 1rem;
+.content {
+  padding-top: 140px;
+  height: 190px;
+  padding-left: 15px;
+  opacity: 0; /* GSAP will animate this */
+  transform: translateX(-50px); /* GSAP will reset this */
 }
 
-.btn:hover{
-    color: black;
-    background-color: #e6e6e6;
+.title {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.3rem;
 }
 
-.description{
-    width: 56rem;
-    line-height: 1.3;
-    padding-top: 1rem;
-    font-size: 1rem;
-    height: 60px;
-    max-width: 550px;
+.btn {
+  color: white;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  border-radius: 5px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  background-color: rgba(51, 51, 51, 0.5);
+  cursor: pointer;
+  margin: 1rem;
+  opacity: 0; /* GSAP will animate this */
+  transform: scale(0.9); /* GSAP will reset this */
 }
 
-.fade_bottom{
-    height: 7.4rem;
-    background-image: linear-gradient(180deg,transparent,rgba(37,37,37,.61),#111);
+.btn:hover {
+  color: black;
+  background-color: #e6e6e6;
+}
+
+.description {
+  width: 56rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  font-size: 1rem;
+  height: 60px;
+  max-width: 550px;
+  opacity: 0; /* GSAP will animate this */
+}
+
+.fade_bottom {
+  height: 7.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #111
+  );
 }
